Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49675

SocketCAN does not really support CAN

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0
    • Some future release
    • SerialBus: CAN Bus
    • None

    Description

      Yes, really. It only sends and receives CANFD frames. If connected to a device talking CAN it rejects all packets as invalid because it receives packets of CAN_MTU (i.e. 16), but expects CANFD_MTU (i.e. 72). The "canbusutil" tool pretends to be able to send CAN messages, but the information if the message is CAN or CANFD is only used to check the payload length, but it is not passed down to any backend.

      While at it: the CAN_RAW_FD_FRAMES setting should not be hardcoded to 1, this should be a user option.

      Attachments

        For Gerrit Dashboard: QTBUG-49675
        # Subject Branch Project Status CR V

        Activity

          People

            ablasche Alex Blasche
            rebemlix Rolf Eike Beer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews