Linux/SocketCAN: Permit the reading of 16 byte and 72 byte can frame MTUs

So far only CANFD frames were permitted.

Task-number: QTBUG-49675
Change-Id: Ie6fd54e26adb667f3c9a95e698ff76a91330c2d0
Reviewed-by: Rolf Eike Beer <eb@emlix.com>
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>